--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@solana/web3.js": "1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.7.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
